move precise_search from reservation_type to instance

--- a/app/new_ui_views/dashboard/shared/fields/_address.html.haml
+++ b/app/new_ui_views/dashboard/shared/fields/_address.html.haml
@@ -6,7 +6,7 @@
       *
     = field_label
 
-  = f.text_field :address, :'data-behavior' => 'address-autocomplete', placeholder: t('locations.address_placeholder'), 'data-address-input' => true, class: 'form-control'
+  = f.text_field :address, :'data-behavior' => 'address-autocomplete', placeholder: t('locations.address_placeholder'), 'data-address-input' => true, class: 'form-control', :'data-precise-search' => current_instance.precise_search?
 
   - if f.object.errors.include?(:address) || f.object.errors.include?(:latitude)
     %span.help-block
@@ -19,6 +19,7 @@
     .map-container
 
 
+  = f.hidden_field :should_check_address, value: current_instance.precise_search? || params[:should_check_address]
   = f.hidden_field :local_geocoding, 'data-local-geocoding' => true
   = f.hidden_field :latitude, 'data-latitude' => true
   = f.hidden_field :longitude, 'data-longitude' => true
