Ability to connect verified number

--- a/app/frontend/stylesheets/new_ui/general/_dialog.scss
+++ b/app/frontend/stylesheets/new_ui/general/_dialog.scss
@@ -122,6 +122,11 @@
     .panel-body {
         padding: 10px;
     }
+
+    .alert {
+        margin-left: 0;
+        margin-right: 0;
+    }
 }
 
 .dialog__actions {
