--- a/app/frontend/stylesheets/new_ui/general/_panel.scss
+++ b/app/frontend/stylesheets/new_ui/general/_panel.scss
@@ -1,4 +1,3 @@
-
 .content-box-a {
     padding: 0 $panel-body-padding;
 
@@ -8,15 +7,16 @@
 }
 
 .panel-body {
-  padding: 10px $panel-body-padding;
+    padding: 20px $panel-body-padding;
 
-  @media (min-width: $screen-desktop) {
-    padding: $panel-body-padding;
-  }
+    @media (min-width: $screen-desktop) {
+        padding: $panel-body-padding;
+    }
 }
 
 .panel-nav-mobile {
     @include clear;
+
     padding: 10px $panel-body-padding;
     margin-top: -30px;
 
@@ -44,6 +44,7 @@
 
 .panel-nav {
     @include clear;
+
     background: $panel-nav-background;
     border: 1px solid $panel-nav-border;
     padding: 0;
@@ -86,9 +87,7 @@
             }
         }
 
-        .error-count {
-
-        }
+        .error-count {}
     }
 
     @media (max-width: $screen-desktop) {
@@ -150,7 +149,6 @@
                 display: inline-block;
                 vertical-align: middle;
                 white-space: nowrap;
-
                 overflow: hidden;
 
                 .controls {
@@ -173,6 +171,7 @@
 .panel-default {
     > .panel-heading, > .panel-footer {
         @include clear;
+
         background: none;
         font-size: 16px;
         padding: 15px $panel-body-padding;
