NM-4664 Customization properties errors will have a better error message

--- a/app/new_ui_views/dashboard/company/transactables/_errors.html.haml
+++ b/app/new_ui_views/dashboard/company/transactables/_errors.html.haml
@@ -5,5 +5,5 @@
       = t('dashboard.transactables.address_errors_html', count: f.object.errors.count)
 
     %ul
-      - f.object.errors.full_messages.each do |msg|
-        %li= msg
+      - f.object.get_error_messages.each do |err|
+        %li= err
