NM-4639 spacer payment imporovements

--- a/app/views/dashboard/company/host_recurring_bookings/_recurring_booking.html.haml
+++ b/app/views/dashboard/company/host_recurring_bookings/_recurring_booking.html.haml
@@ -112,11 +112,15 @@
         %tr
           %th= t('dashboard.user_recurring_bookings.periods.start_end')
           %th= t('dashboard.user_recurring_bookings.periods.total_amount')
+          %th= t('dashboard.user_recurring_bookings.periods.payment_state')
           %th= t('dashboard.user_recurring_bookings.periods.paid_at')
       %tbody
         - recurring_booking.recurring_booking_periods.each do |period|
           %tr
             %td= "#{I18n.l(period.period_start_date, format: :short)} - #{I18n.l(period.period_end_date, format: :short)}"
             %td= humanized_money_with_cents_and_symbol(current_user == recurring_booking.host ? period.total_amount - period.service_fee_amount_guest : period.total_amount)
+            %td
+              %span{class: period.payment.try(:state) }
+                = t("dashboard.user_recurring_bookings.states.#{period.payment.try(:state)}")
             %td
               = "#{I18n.l(period.paid_at, format: :short)}" if period.paid_at?
