--- a/app/new_ui_views/dashboard/shared/_dashboard_messages.html.haml
+++ b/app/new_ui_views/dashboard/shared/_dashboard_messages.html.haml
@@ -1,4 +1,4 @@
-- if @company.missing_payout_information?
+- if @company && @company.missing_payout_information?
   %div{class: "alert error", :'data-flash-message' => true}
     = (t('flash_messages.dashboard.missing_payout_information', link: link_to("Admin/Payments", edit_dashboard_company_payouts_path )) ).html_safe
 
