--- a/app/frontend/stylesheets/new_ui/general/_flash-message.scss
+++ b/app/frontend/stylesheets/new_ui/general/_flash-message.scss
@@ -16,6 +16,11 @@
     margin: 0 20px 10px;
     overflow: hidden;
 
+    .panel & {
+        margin-left: 0;
+        margin-right: 0;
+    }
+
     .close {
         position: absolute;
         top: 50%;
@@ -30,7 +35,8 @@
         font-size: 0;
 
         &:before {
-            @include fa-icon();
+            @include fa-icon;
+
             content: $fa-var-times-circle;
             font-size: 22px;
         }
@@ -44,10 +50,14 @@
         margin-left: 0;
     }
 
-    @include alert-color(error,   $flash-error-background,   $flash-error-color,   $flash-error-close);
-    @include alert-color(notice,  $flash-notice-background,  $flash-notice-color,  $flash-notice-close);
+    @include alert-color(error, $flash-error-background, $flash-error-color, $flash-error-close);
+
+    @include alert-color(notice, $flash-notice-background, $flash-notice-color, $flash-notice-close);
+
     @include alert-color(warning, $flash-warning-background, $flash-warning-color, $flash-warning-close);
+
     @include alert-color(success, $flash-success-background, $flash-success-color, $flash-success-close);
+
     @include alert-color(deleted, $flash-deleted-background, $flash-deleted-color, $flash-deleted-close);
 
     @media (min-width: $screen-md) {
