--- a/app/frontend/stylesheets/new_ui/general/_dialog.scss
+++ b/app/frontend/stylesheets/new_ui/general/_dialog.scss
@@ -17,6 +17,11 @@
     }
 }
 
+.dialog {
+    position: relative;
+    z-index: 1090;
+}
+
 .dialog__overlay {
     position: fixed;
     z-index: 1100;
@@ -142,4 +147,19 @@
 
 .pac-container {
     z-index: 1200;
+}
+
+.dialog.ctc-dialog .dialog__container {
+    .dialog__header {
+        text-align: center;
+    }
+
+    @media (min-width: $screen-sm) {
+        width: 280px;
+        min-height: auto;
+    }
+
+    .dialog__actions {
+        text-align: center;
+    }
 }
