--- a/app/views/instance_admin/manage_blog/settings/_form.html.haml
+++ b/app/views/instance_admin/manage_blog/settings/_form.html.haml
@@ -6,9 +6,13 @@
     = f.input :allow_video_embeds, inline_label: true
 
 .row
-  .input-container.col-xs-12
-    = f.simple_fields_for :owner do |i|
+  = f.simple_fields_for :owner do |i|
+    .input-container.col-xs-4
       = i.input :user_blogs_enabled, inline_label: true
+    .input-container.col-xs-4
+      = i.input :enquirer_blogs_enabled, inline_label: true
+    .input-container.col-xs-4
+      = i.input :lister_blogs_enabled, inline_label: true
 
 .row
   .input-container.col-xs-6
