Minor CSS fixes in Twilio integration

--- a/app/frontend/stylesheets/new_ui/modules/_integrations.scss
+++ b/app/frontend/stylesheets/new_ui/modules/_integrations.scss
@@ -1,9 +1,18 @@
-.intergration-service {
+.integration-service {
     h3 {
         font-weight: bold;
     }
 
     p {
         margin-top: 0;
+    }
+
+    @media (min-width: $screen-sm) {
+        .action-trigger {
+            display: block;
+            width: 100%;
+            padding-left: 0;
+            padding-right: 0;
+        }
     }
 }
