--- a/app/views/dashboard/reviews/_feedback.html.haml
+++ b/app/views/dashboard/reviews/_feedback.html.haml
@@ -9,7 +9,8 @@
 
 = form_tag dashboard_reviews_path, class: 'review-form', data: { 'rating-system-id' => rating_system.id, 'review-id' => review_id, 'reviewable-id' => reviewable_id, 'reviewable-type' => reviewable_type, :'review-form' => (is_completed ? 'update' : 'create') } do
 
-  %h2.review-title= feedback.review_title
+
+  = render 'review_title', review_title: feedback.review_title, review_target_title: feedback.review_target_title(rating_system.subject), feedback: feedback, feedback_type: rating_system.subject
 
   = hidden_field_tag :rating_system_id, rating_system.id
   = hidden_field_tag :reviewable_id, reviewable_id
@@ -18,8 +19,7 @@
   .row
     .col-sm-3
 
-      .order-image
-        = feedback.order_image
+      = render 'review_image', order_image: feedback.order_image, review_target_image: feedback.review_target_image(rating_system.subject), feedback: feedback, feedback_type: rating_system.subject
 
       - created_at = is_completed ? feedback.reviewable.created_at : feedback.created_at
       - order_id = (is_completed ? feedback.reviewable_id : feedback.id)
@@ -47,7 +47,7 @@
           - else
             - link_to_user_profile = link_to t('dashboard.reviews.feedback.view_seller_profile'), user_path(feedback.order.company.creator)
 
-      = render 'dashboard/reviews/order_info', created_at: I18n.l(created_at.to_date, format: :long), order_id: order_id, feedback: feedback, link_to_user_profile: link_to_user_profile, view_order_link: view_order_link, feedback_type: feedback_type
+      = render 'dashboard/reviews/order_info', created_at: I18n.l(created_at.to_date, format: :long), order_id: order_id, feedback: feedback, link_to_user_profile: link_to_user_profile, view_order_link: view_order_link, feedback_type: rating_system.subject
 
     .col-sm-9
       - if is_completed
