--- a/app/views/registrations/_click_to_call.html.haml
+++ b/app/views/registrations/_click_to_call.html.haml
@@ -9,7 +9,7 @@
 
       .col-sm-2
         - if current_user.communication.try(:verified?)
-          = button_to t('dashboard.click_to_call.disconnect'), user_communication_path(current_user, 'delete'), method: :delete, class: 'btn btn-primary pull-right action-trigger'
+          = button_to t('dashboard.click_to_call.disconnect'), user_communication_path(current_user, 'delete'), method: :delete, class: 'btn btn-primary action-trigger'
 
         - else
           = link_to t('dashboard.click_to_call.verify'),edit_dashboard_click_to_call_preferences_path, class: 'btn btn-primary action-trigger', :"data-modal" => ''
