--- a/app/views/shared/components/_wish_list_button.html.liquid
+++ b/app/views/shared/components/_wish_list_button.html.liquid
@@ -1,4 +1,4 @@
-<div class="favorite" id="favorite-{{ object | dom_id }}">
+<div class="favorite favorite-toggler" id="favorite-{{ object | dom_id }}" data-favorite-id="{{ object.id }}">
   {% assign is_favorite = current_user | already_favorite:object %}
   {% if is_favorite %}
     {% assign path = 'wish_list_path' | generate_url: id: object.id, wishlistable_type: object.class_name, method: 'delete' %}
@@ -7,10 +7,8 @@
     {% assign path = 'wish_lists_path' | generate_url: id: object.id, wishlistable_type: object.class_name, method: 'post' %}
     {% assign method = 'post' %}
   {% endif %}
-    <a href="{{ path }}" class="{{ link_to_class }}" data-method="{{ method }}" data-action-link="true" data-current-user="{% if current_user != blank %}true{% else%}false{% endif %}">
+    <a href="{{ path }}" class="{{ link_to_class }}" data-method="{{ method }}" data-action-link data-current-user="{% if current_user != blank %}true{% else%}false{% endif %}">
     <div data-favorite-icon="true" class="icon {{ platform_context.wish_lists_icon_set }} {% if is_favorite %}selected{% endif %}"></div>
     <span data-text="true">{% if is_favorite %}{{ 'wish_lists.buttons.selected_state' | t}}{% else %}{{ 'wish_lists.buttons.unselected_state' | t }}{% endif %}</span>
   </a>
 </div>
-
-<script>$(document).trigger('init:favoritebutton.nearme', $("#favorite-{{ object | dom_id }}"));</script>
