--- a/app/views/wish_lists/create.js.erb
+++ b/app/views/wish_lists/create.js.erb
@@ -1,4 +1,8 @@
-$(".favorite#favorite-<%= dom_id(@item) %> [data-favorite-icon]").addClass('selected');
-$(".favorite#favorite-<%= dom_id(@item) %> [data-text]").html("<%= t('wish_lists.buttons.selected_state') %>");
-$(".favorite#favorite-<%= dom_id(@item) %> [data-action-link]").attr('href', "<%= wish_list_path(id: @item.id, wishlistable_type: @item.class.name, method: :delete).html_safe %>");
-$(".favorite#favorite-<%= dom_id(@item) %> [data-action-link]").data('method', "delete");
+(function(){
+  var el = document.getElementById('favorite-<%= dom_id(@item) %>');
+  el.querySelector('[data-favorite-icon]').classList.add('selected');
+  el.querySelector('[data-text]').innerHTML = '<%= t('wish_lists.buttons.selected_state') %>';
+  var link = el.querySelector('[data-action-link]');
+  link.href = '<%= wish_list_path(id: @item.id, wishlistable_type: @item.class.name, method: :delete).html_safe %>';
+  link.setAttribute('data-method', 'delete');
+}());
