--- a/app/views/listings/recurring_bookings/review.html.haml
+++ b/app/views/listings/recurring_bookings/review.html.haml
@@ -49,6 +49,7 @@
           %h2= t 'reservations_review.contact_information'
 
           = render 'contact_information_fields', :f => f
+        = render 'reservation_properties', f: f
         - if f.object.payment_subscription.present? && f.object.payment_subscription.payment_methods.any?
           = render 'shared/payment_subscription', f: f
           = f.button :submit, t('reservations_review.buttons.request'), data: { disable_with: t('reservations_review.disabled_buttons.request') }
