--- a/app/new_ui_views/dashboard/user_reservations/_reservation.html.haml
+++ b/app/new_ui_views/dashboard/user_reservations/_reservation.html.haml
@@ -34,7 +34,7 @@
   - if reservation.payment.test_mode?
     .alert.alert-warning= I18n.t('dashboard.user_reservations.test_mode')
 
-  - if reservation.listing.present? && reservation.listing.administrator.communication.try(:verified) && !current_user.communication.try(:verified)
+  - if show_not_verified_user_alert?(reservation.listing)
     .alert.alert-warning
       = I18n.t('dashboard.click_to_call.not_verified_self_warning', link: link_to(t('dashboard.nav.social_accounts'), social_accounts_path).html_safe).html_safe
 
