Update styling of location search view

--- a/app/frontend/stylesheets/sections/listings/_search.scss
+++ b/app/frontend/stylesheets/sections/listings/_search.scss
@@ -1493,6 +1493,10 @@ section.search section#results.mixed {
 
         .location-data {
           padding-top: 25px;
+
+          .subheader {
+            margin: 0 0 55px 0;
+          }
         }
 
         .location-photos-container {
